# playit-agent

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE.txt  README.md  agent-schema-release.json  cargo-publish.sh  ci.Dockerfile  default.nix  deploy.sh  env.sample  flake.nix  mac-deploy.sh  windows-build.sh
.cargo/: config
.github/workflows/: build-release.yml  build.yml  docker-publish.yml  manual-build.yml  release.yml  rust.yml
arch/: Containerfile  test-pkgbuilds.sh  update-bin-pkgbuild-shasum.sh
assets/: playit.icns
build-deploy/: .gitignore
build-scripts/: .gitignore  build-linux-deb.sh  delete-playit-symlink.sh  digicert.pem  download.sh  macos-app.sh  macos-launchagent.plist.template  macos-postinstall.sh  macos-preinstall.sh  macos-run.sh  macos-uninstall.sh  nfpm-apk.yaml  nfpm-openrc.yaml  nfpm.yaml  package-arch-aur.sh  package-linux-deb.sh  package-linux-nfpm.sh  package-linux-rpm.sh  package-linux-stage.sh  package-macos-app.sh  package-macos-pkg.sh  package-metadata.sh  prepare-deb.sh  set-release-number.sh  submit-release.sh  ubuntu-deb.sh  upload-r2.sh  windows-sign.sh
build-scripts/nfpm/: postinstall.sh  postremove.sh  preinstall.sh  preremove.sh
build-scripts/nfpm/openrc/: postinstall.sh  preremove.sh
docker/: entrypoint.sh  usersetup.sh
linux/: logrotate.conf  playit  playit.openrc  playit.service  playit.sysusers  sysusers.conf
macos/: setup.sh
