[workspace]
members = [
    "packages/agent_cli",
    "packages/agent_core",
    "packages/agent_proto",
    "packages/api_client",
    "packages/ping_monitor",
]

[workspace.package]
version = "0.15.22"

[workspace.dependencies]
tokio = { version = "1.39", features = ["full"] }

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"
hex = "0.4.3"
toml = "0.8.19"
uuid = { version = "1.10", features = ["serde"] }
byteorder = "1.5"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
message-encoding = "0.2.2"
dirs = "5.0.1"

[profile.release]
strip = "debuginfo"
opt-level = "z"
lto = true
codegen-units = 1
