[workspace]
members = [
    "packages/agent_cli",
    "packages/agent_core",
    "packages/agent_proto",
    "packages/api_client",
]
resolver = "3"

[workspace.package]
version = "0.17.0"

[workspace.dependencies]
tokio = { version = "1.48", features = ["full"] }
tokio-util = "0.7"

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9.2"
hex = "0.4.3"
toml = "0.9.8"
uuid = { version = "1.18", features = ["serde"] }
byteorder = "1.5"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
message-encoding = "0.2.2"
dirs = "6.0"

[profile.release]
strip = "debuginfo"
opt-level = "z"
lto = true
codegen-units = 1
